Updated the description

--- a/docs/content/concepts/sui-architecture/sui-storage.mdx
+++ b/docs/content/concepts/sui-architecture/sui-storage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sui Storage Cost
-description: Storage on Sui
+description: Historical data and the pricing of your storage solutions provide insights into the cost of your operations on the Sui network.
 ---
 
 The cost of operating on any blockchain boils down to two major components: compute, the cost of the power needed to process programming logic, and storage, the amount of digital space necessary to store that logic and its results.
