--- a/docs/content/guides/developer/coin/loyalty.mdx
+++ b/docs/content/guides/developer/coin/loyalty.mdx
@@ -26,7 +26,7 @@ The `LOYALTY` minting function is called `reward_user`. As mentioned previously,
 
 Finally, the example includes a `buy_a_gift` function to handle the redemption of `LOYALTY` tokens for `Gift` types. The function ensures the gift price matches the number of loyalty tokens spent, then uses the `token::spend` function to handle the treasury bookkeeping. 
 
-{@inject: examples/move/token/sources/loyalty.move#fun=buy_a_gift}
+{@inject: examples/move/token/sources/loyalty.move#fun=buy_a_gift noComments}
 
 ### Complete code 
 
