--- a/docs/content/guides/developer/nft.mdx
+++ b/docs/content/guides/developer/nft.mdx
@@ -25,9 +25,14 @@ The module includes functions to return NFT metadata, too. Referencing the hypot
 
 {@inject: examples/move/nft/sources/testnet_nft.move#fun=name noComments}
 
-The complete, commented code for the example follows.
+<details>
+<summary>
+Toggle complete source code 
+</summary>
 
 {@inject: examples/move/nft/sources/testnet_nft.move}
+
+</details>
 
 ## Related links
 
