--- a/docs/content/guides/developer/nft/nft-rental.mdx
+++ b/docs/content/guides/developer/nft/nft-rental.mdx
@@ -643,13 +643,13 @@ rect rgba(191, 223, 255, 0.2)
 
 ## Deployment
 
-{@include: ../../snippets/initialize-sui-client-cli.mdx}
+{@include: ../../../snippets/initialize-sui-client-cli.mdx}
 
-{@include: ../../snippets/publish-to-devnet-with-coins.mdx}
+{@include: ../../../snippets/publish-to-devnet-with-coins.mdx}
 
 ## Related links
 
 - [NFT Rental example](https://github.com/MystenLabs/sui-nft-rental): The source code that this document references.
-- [Sui Kiosk](../kiosk.mdx): Kiosk is a decentralized system for commerce applications on Sui.
-- [Kiosk Apps](../kiosk-apps.mdx): The Kiosk Apps standard extends the functionality of Sui Kiosk.  
-- [Custom Transfer Rules](../../concepts/transfers/custom-rules.mdx): Custom transfer rules are used in this example to define rental policies.
+- [Sui Kiosk](../../../standards/kiosk.mdx): Kiosk is a decentralized system for commerce applications on Sui.
+- [Kiosk Apps](../../../standards/kiosk-apps.mdx): The Kiosk Apps standard extends the functionality of Sui Kiosk.  
+- [Custom Transfer Rules](../../../concepts/transfers/custom-rules.mdx): Custom transfer rules are used in this example to define rental policies.
