removed sentence for clarity

--- a/docs/content/guides/developer/nft.mdx
+++ b/docs/content/guides/developer/nft.mdx
@@ -3,7 +3,7 @@ title: Create a Non-Fungible Token
 keywords: [ERC-721, NFT]
 ---
 
-On Sui, everything is an object. Moreover, everything is a non-fungible token (NFT) as its objects are unique, non-fungible, and owned. So technically, a basic type publishing is enough to create a specific NFT.
+On Sui, everything is an object. Moreover, everything is a non-fungible token (NFT) as its objects are unique, non-fungible, and owned.
 
 Creating NFTs on Sui differs from other blockchains that are not object based. Those blockchains require a dedicated standard to handle the properties that define NFTs because they are based on a mapping between smart contracts and the token's ID. For instance, the ERC-721 standard on Ethereum was necessary to pair a globally unique ID with the relevant smart contract address to create a unique token instance on the network. 
 
