--- a/sdk/docs/pages/typescript/cryptography/keypairs.mdx
+++ b/sdk/docs/pages/typescript/cryptography/keypairs.mdx
@@ -135,7 +135,7 @@ You can derive a `Keypair` by converting the 33-byte secret key encoded in Bech3
 `Uint8Array` and passing it to the `fromSecretKey` method of a `Keypair` class.
 
 ```typescript
-import { decodeSuiPrivateKey, encodeSuiPrivateKey } from '@mysten/sui/cryptography/keypair';
+import { decodeSuiPrivateKey, encodeSuiPrivateKey } from '@mysten/sui/cryptography';
 import { Ed25519Keypair } from '@mysten/sui/keypairs/ed25519';
 
 const encoded = encodeSuiPrivateKey(
