--- a/docs/content/guides/developer/cryptography/zklogin-integration.mdx
+++ b/docs/content/guides/developer/cryptography/zklogin-integration.mdx
@@ -223,9 +223,9 @@ const partialZkLoginSignature = proofResponse as PartialZkLoginSignature;
 
 ### Run the proving service in your backend
 
-1. Install [git lfs](https://git-lfs.com/) which is needed before downloading the zkey.
+1. Install [Git Large File Storage](https://git-lfs.com/) (an open-source Git extension for large file versioning) before downloading the zkey.
 
-1. Download the [Groth16 proving key zkey file](https://docs.circom.io/getting-started/proving-circuits/). There are zkeys available for all the networks. See [the Ceremony section](#ceremony) for more details on how the main proving key is generated. 
+1. Download the [Groth16 proving key zkey file](https://docs.circom.io/getting-started/proving-circuits/). There are zkeys available for all Sui networks. See [the Ceremony section](#ceremony) for more details on how the main proving key is generated. 
 
    - Main zkey (for Mainnet and Testnet)
      ```bash
