Fix some incorrectly updated docs

--- a/docs/content/guides/developer/app-examples/trustless-swap/frontend.mdx
+++ b/docs/content/guides/developer/app-examples/trustless-swap/frontend.mdx
@@ -166,8 +166,8 @@ export function useTransactionExecution() {
 				transaction: txb,
 			});
 
-			const res = await client.executeTransaction({
-				transaction: signature.bytes,
+			const res = await client.executeTransactionBlock({
+				transactionBlock: signature.bytes,
 				signature: signature.signature,
 				options: {
 					showEffects: true,
