--- a/docs/content/guides/developer/cryptography/zklogin-integration.mdx
+++ b/docs/content/guides/developer/cryptography/zklogin-integration.mdx
@@ -225,7 +225,7 @@ const partialZkLoginSignature = proofResponse as PartialZkLoginSignature;
 
 1. Install [Git Large File Storage](https://git-lfs.com/) (an open-source Git extension for large file versioning) before downloading the zkey.
 
-1. Download the [Groth16 proving key zkey file](https://docs.circom.io/getting-started/proving-circuits/). There are zkeys available for all Sui networks. See [the Ceremony section](#ceremony) for more details on how the main proving key is generated. 
+1. Download the [Groth16 proving key zkey file](https://docs.circom.io/getting-started/proving-circuits/). There are zkeys available for all Sui networks. See [the Ceremony section](#ceremony) for more details on how the main proving key is generated.
 
    - Main zkey (for Mainnet and Testnet)
      ```bash
@@ -336,8 +336,8 @@ const zkLoginSignature: SerializedSignature = getZkLoginSignature({
 Finally, execute the transaction.
 
 ```typescript
-client.executeTransaction({
-	transaction: bytes,
+client.executeTransactionBlock({
+	transactionBlock: bytes,
 	signature: zkLoginSignature,
 });
 ```
