Fixed tests and code render

--- a/docs/content/concepts/dynamic-fields.mdx
+++ b/docs/content/concepts/dynamic-fields.mdx
@@ -28,7 +28,11 @@ Unlike an object's regular fields where names must be Move identifiers, dynamic 
 
 Use the `add` function from the relevant Sui framework module to add dynamic fields:
 
+**Dynamic field**
+
 {@inject: crates/sui-framework/packages/sui-framework/sources/dynamic_field.move#fun=add noComments}
+
+**Dynamic object field**
 
 {@inject: crates/sui-framework/packages/sui-framework/sources/dynamic_object_field.move#fun=add noComments}
 
