--- a/docs/content/references/sui-sdks.mdx
+++ b/docs/content/references/sui-sdks.mdx
@@ -21,7 +21,7 @@ Sui provides developer kits that act as wrappers for the Sui API. The Sui commun
     TypeScript SDK for integrating Sui in your TS dApps.
 </Card>
 <Card title="zkSend SDK" href="https://sdk.mystenlabs.com/zksend">
-    zkSend SDK for Simply share a link to send SUI.
+    zkSend SDK to enable you to incorporate Stashed functionality.
 </Card>
 </Cards>
 
