remove usages to math

--- a/crates/sui-framework/docs/move-stdlib/u64.md
+++ b/crates/sui-framework/docs/move-stdlib/u64.md
@@ -182,7 +182,7 @@ math::sqrt(8 * 1000000) => 2828; // same as above, 2828 / 1000 (2.828)
 
 
 <pre><code><b>public</b> <b>fun</b> <a href="../move-stdlib/u64.md#0x1_u64_sqrt">sqrt</a>(x: <a href="../move-stdlib/u64.md#0x1_u64">u64</a>): <a href="../move-stdlib/u64.md#0x1_u64">u64</a> {
-    std::macros::num_sqrt!&lt;<a href="../move-stdlib/u64.md#0x1_u64">u64</a>, <a href="../move-stdlib/u128.md#0x1_u128">u128</a>&gt;(x, 64)
+    std::macros::num_sqrt!&lt;<a href="../move-stdlib/u64.md#0x1_u64">u64</a>, u128&gt;(x, 64)
 }
 </code></pre>
 
