--- a/docs/content/guides/developer/nft.mdx
+++ b/docs/content/guides/developer/nft.mdx
@@ -37,5 +37,6 @@ Toggle complete source code
 ## Related links
 
 - [NFT Rental](./nft/nft-rental.mdx): Example that rents NFTs using Kiosk Apps. 
+- [Asset Tokenization](./nft/asset-tokenization.mdx): Example that uses NFTs to tokenize real-world assets.
 - [Kiosk](../../standards/kiosk.mdx): Asset storage on the Sui network.
 - [Kiosk Apps](../../standards/kiosk-apps.mdx): Extend the functionality of the Kiosk standard. 
