--- a/docs/content/guides/developer/nft/asset-tokenization.mdx
+++ b/docs/content/guides/developer/nft/asset-tokenization.mdx
@@ -43,8 +43,9 @@ As with all smart contracts on Sui, Move provides the logic that powers asset to
 
 :::info
 
-This reference implementation uses the Kiosk primitive to ensure that TAs created operate within their creator's defined policy. We recommend you use the implementation as it is in order to have marketable TAs that support Rules (e.g: royalties, commissions etc).
-If operating within the Kiosk primitive is not a requirement, then the unlock module & some of the proxy's methods related to Transfer Policies can be excluded.
+This reference implementation uses the [Kiosk standard](../../../standards/kiosk.mdx) to ensure that tokenized assets operate within their defined policy. Use the implementation as presented to have marketable tokenized assets that support rules like royalties, commissions, and so on.
+
+If using Kiosk is not a requirement, then you can exclude the unlock module and some of the proxy's methods related to transfer policies.
 
 :::
 
@@ -62,7 +63,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `AssetCap`
 
-  An AssetCap should be generated for each new Asset we wish to represent as a fractional NFT. In most scenarios, it is recommended to be created as an owned object, which can then be transferred to the platform's administrator for access restricted method invocation.
+  Generate an `AssetCap` for each new asset represented as a fractional NFT. In most scenarios, you should create it as an owned object, which you can then transfer to the platform's administrator for access-restricted method invocation.
 
   ```rust
   struct AssetCap<phantom T> {
@@ -78,7 +79,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `AssetMetadata`
 
-  The AssetMetadata struct defines the metadata representing the entire asset that we intend to fractionalize. It is recommended to be a shared object.
+  The `AssetMetadata` struct defines the metadata representing the entire asset to fractionalize. This should be a shared object.
 
   ```rust
   struct AssetMetadata<phantom T> has key, store {
@@ -98,7 +99,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `TokenizedAsset`
 
-  The TokenizedAsset will be minted with a specified balance where the balance is less than or equal to the remaining supply. If the VecMap of an asset is populated with values, indicating multiple unique entries, it is considered a NFT. Conversely, if the VecMap of an asset is not populated, indicating an absence of individual entries, it is considered an FT.
+  The `TokenizedAsset` is minted with a specified balance that is less than or equal to the remaining supply. If the `VecMap` of an asset is populated with values, indicating multiple unique entries, it is considered an NFT. Conversely, if the `VecMap` of an asset is not populated, indicating an absence of individual entries, it is considered an FT.
 
   ```rust
   struct TokenizedAsset<phantom T> has key, store {
@@ -114,7 +115,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `PlatformCap`
 
-  The PlatformCap refers to the capability issued to the individual who deploys the contract. This capability grants specific permissions or authority related to the platform's functionalities, allowing the deployer certain controlled actions or access rights within the deployed contract.
+  The `PlatformCap` refers to the capability issued to the individual who deploys the contract. This capability grants specific permissions or authority related to the platform's functionalities, allowing the deployer certain controlled actions or access rights within the deployed contract.
 
   ```rust
   /// Capability that is issued to the one deploying the contract
@@ -125,7 +126,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `init`
 
-  This function creates a PlatformCap and sends it to the sender.
+  This function creates a `PlatformCap` and sends it to the sender.
 
   ```rust
   fun init(ctx: &mut TxContext) {}
@@ -133,7 +134,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `new_asset`
 
-  This function holds the responsibility of creating a fresh representation of an asset, defining its crucial attributes. Upon execution, it returns two distinct objects: the AssetCap and AssetMetadata. These objects encapsulate the necessary information and characteristics defining the asset within the system.
+  This function holds the responsibility of creating a fresh representation of an asset, defining its crucial attributes. Upon execution, it returns two distinct objects: the `AssetCap` and `AssetMetadata`. These objects encapsulate the necessary information and characteristics defining the asset within the system.
 
   ```rust
   public fun new_asset<T: drop>(
@@ -164,7 +165,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `split`
 
-  This function, is provided with a tokenized asset of the FT type and a balance greater than 1, along with a value less than the object's balance, and performs a split operation on the tokenized asset. The operation divides the existing tokenized asset into two separate tokenized assets. The newly created tokenized asset will have a balance equal to the given value, while the balance of the provided object is reduced by the specified value. Upon completion, the function returns the newly created tokenized asset. This function does not accept or operate on tokenized assets of the NFT type.
+  This function is provided with a tokenized asset of the FT type and a balance greater than 1, along with a value less than the object's balance, and performs a split operation on the tokenized asset. The operation divides the existing tokenized asset into two separate tokenized assets. The newly created tokenized asset has a balance equal to the given value, while the balance of the provided object is reduced by the specified value. Upon completion, the function returns the newly created tokenized asset. This function does not accept or operate on tokenized assets of the NFT type.
 
   ```rust
   public fun split<T>(
@@ -176,7 +177,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `join`
 
-  This function is given two tokenized assets of the FT type and executes a merge operation on the tokenized assets. The operation involves increasing the balance of the first tokenized asset by the balance of the second one. Subsequently, the second tokenized asset will be burned or removed from circulation. After the process concludes, the function returns the ID of the burned tokenized asset.
+  This function is given two tokenized assets of the FT type and executes a merge operation on the tokenized assets. The operation involves increasing the balance of the first tokenized asset by the balance of the second one. Subsequently, the second tokenized asset is burned or removed from circulation. After the process concludes, the function returns the ID of the burned tokenized asset.
 
   This function does not accept or operate on tokenized assets of the NFT type.
 
@@ -189,7 +190,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `burn`
 
-  This function requires the assetCap as a parameter, thereby restricting its invocation solely to the platform admin. Additionally, it accepts a tokenized asset that will be burned as part of its operation. Upon burning the provided tokenized asset, the circulating supply decreases by the balance of the burnt item. It necessitates a tokenized asset which is burnable.
+  This function requires the `assetCap` as a parameter, thereby restricting its invocation solely to the platform admin. Additionally, it accepts a tokenized asset that is burned as part of its operation. Upon burning the provided tokenized asset, the circulating supply decreases by the balance of the burnt item. It necessitates a tokenized asset that is burnable.
 
   ```rust
   public fun burn<T>(
@@ -224,7 +225,7 @@ When it receives a new [one-time witness](concepts/sui-move-concepts/one-time-wi
 
 - `create_vec_map_from_arrays`
 
-  This internal helper function is utilized to populate a `VecMap<String, String>`. It assists in the process of filling or setting key-value pairs within the VecMap data structure.
+  This internal helper function populates a `VecMap<String, String>`. It assists in the process of filling or setting key-value pairs within the `VecMap` data structure.
 
   ```rust
   fun create_vec_map_from_arrays(
@@ -243,7 +244,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 - `Proxy`
 
-  The PROXY struct represents the one-time witness (OTW) utilized to claim the publisher.
+  The `PROXY` struct represents the one-time witness (OTW) to claim the publisher.
 
   ```rust
   struct PROXY has drop {}
@@ -251,7 +252,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 - `Registry`
 
-  This is a shared object serves as a repository for the Publisher object, specifically intended to control and restrict access to the creation and management of transfer policies for tokenized assets. Mutable access to this object is exclusively granted to the actual publisher.
+  This shared object serves as a repository for the `Publisher` object, specifically intended to control and restrict access to the creation and management of transfer policies for tokenized assets. Mutable access to this object is exclusively granted to the actual publisher.
 
   ```rust
   struct Registry has key {
@@ -261,7 +262,8 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
   ```
 
 - `ProtectedTP`
-  This is a shared object utilized to store an empty transfer policy. It is required to create one per type `<T>` generated by a user. Its involvement is apparent in the unlock module.
+
+  This is a shared object that stores an empty transfer policy. It is required to create one per type `<T>` generated by a user. Its involvement is apparent in the unlock module.
 
   ```rust
   struct ProtectedTP<phantom T> has key, store {
@@ -275,7 +277,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 - `init`
 
-  This function is responsible for creating the Publisher object, encapsulating it within the Registry, and subsequently sharing the Registry object
+  This function is responsible for creating the `Publisher` object, encapsulating it within the registry, and subsequently sharing the `Registry` object.
 
   ```rust
   fun init(otw: PROXY, ctx: &mut TxContext) {}
@@ -283,7 +285,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 - `setup_tp`
 
-  This function leverages the publisher nested within the registry and the sender's publisher. It generates and returns a transfer policy and the associated transfer policy cap specific to the `TokenizedAsset<T>`. This type 'T' is derived from the Publisher object.
+  This function leverages the publisher nested within the registry and the sender's publisher. It generates and returns a transfer policy and the associated transfer policy cap specific to the `TokenizedAsset<T>`. This type 'T' is derived from the `Publisher` object.
 
   It also generates an empty transfer policy wrapped in a `ProtectedTP<T>` object, which is shared. You can use this functionality under specific conditions to override the kiosk lock rule.
 
@@ -298,7 +300,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 - `new_display`
 
-  This function utilizes the publisher nested within the registry in and the sender's publisher to generate and return an empty Display for the type `TokenizedAsset<T>`, where 'T' is encapsulated within the Publisher object.
+  This function utilizes the publisher nested within the registry and the sender's publisher to generate and return an empty `Display` for the type `TokenizedAsset<T>`, where `T` is encapsulated within the `Publisher` object.
 
   ```rust
   public fun new_display<T: drop>(
@@ -310,7 +312,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 - `transfer_policy`
 
-  This function provided with the protectedTP, returns the Transfer Policy specifically designed for the type `TokenizedAsset<T>`
+  This function, provided with the `protectedTP`, returns the transfer policy specifically designed for the type `TokenizedAsset<T>`
 
   ```rust
   public(friend) fun transfer_policy<T>(
@@ -325,9 +327,9 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
   ```rust
   public fun publisher_mut(
-          _: &PlatformCap,
-          registry: &mut Registry
-      ): &mut Publisher {}
+      _: &PlatformCap,
+      registry: &mut Registry
+  ): &mut Publisher {}
   ```
 
 </TabItem>
@@ -336,7 +338,7 @@ The `proxy` module comprises methods that the type owner utilizes to execute pub
 
 The `unlock` module facilitates the unlocking of a tokenized asset specifically for authorized burning and joining.
 
-It allows tokenized asset type creators to enable these operations for Kiosk assets without necessitating adherence to the default set of requirements, such as rules or policies.
+It allows tokenized asset type creators to enable these operations for kiosk assets without necessitating adherence to the default set of requirements, such as rules or policies.
 
 **Structs**
 
@@ -346,13 +348,13 @@ It allows tokenized asset type creators to enable these operations for Kiosk ass
 
   ```rust
   struct JoinPromise {
-          /// the item where the balance of the burnt tokenized asset will be added.
-          item: ID,
-          /// burned is the id of the tokenized asset that will be burned
-          burned: ID,
-          /// the expected final balance of the item after merging
-          expected_balance: u64
-      }
+      /// the item where the balance of the burnt tokenized asset will be added.
+      item: ID,
+      /// burned is the id of the tokenized asset that will be burned
+      burned: ID,
+      /// the expected final balance of the item after merging
+      expected_balance: u64
+  }
   ```
 
 - `BurnPromise`
@@ -361,8 +363,8 @@ It allows tokenized asset type creators to enable these operations for Kiosk ass
 
   ```rust
   struct BurnPromise {
-          expected_supply: u64
-      }
+    expected_supply: u64
+  }
   ```
 
 **Functions**
@@ -373,45 +375,48 @@ It allows tokenized asset type creators to enable these operations for Kiosk ass
 
   ```rust
   public fun asset_from_kiosk_to_join<T>(
-          self: &TokenizedAsset<T>, // A
-          to_burn: &TokenizedAsset<T>, // B
-          protected_tp: &ProtectedTP<TokenizedAsset<T>>, // unlocker
-          transfer_request: TransferRequest<TokenizedAsset<T>> // transfer request for b
-      ): JoinPromise {}
+    self: &TokenizedAsset<T>, // A
+    to_burn: &TokenizedAsset<T>, // B
+    protected_tp: &ProtectedTP<TokenizedAsset<T>>, // unlocker
+    transfer_request: TransferRequest<TokenizedAsset<T>> // transfer request for b
+  ): JoinPromise {}
   ```
 
 - `prove_join`
 
-  A function utilized to demonstrate that the unlocked tokenized asset has been successfully burned and its balance has been incorporated into an existing tokenized asset.
+  A function utilized to demonstrate that the unlocked tokenized asset is successfully burned and its balance is incorporated into an existing tokenized asset.
 
   ```rust
   public fun prove_join<T>(
-          self: &TokenizedAsset<T>,
-          promise: JoinPromise,
-          proof: ID) {}
+    self: &TokenizedAsset<T>,
+    promise: JoinPromise,
+    proof: ID) {
+  }
   ```
 
 - `asset_from_kiosk_to_burn`
 
-  This helper function is intended to facilitate the burning of tokenized assets locked in kiosk. It assists in their unlocking while ensuring a promise that the circulating supply will be reduced, achieved by returning a `BurnPromise`.
+  Helper function that facilitates the burning of tokenized assets locked in a kiosk. It assists in their unlocking while ensuring a promise that the circulating supply will be reduced, achieved by returning a `BurnPromise`.
 
   ```rust
   public fun asset_from_kiosk_to_burn<T>(
-          to_burn: &TokenizedAsset<T>,
-          asset_cap: &AssetCap<T>,
-          protected_tp: &ProtectedTP<TokenizedAsset<T>>,
-          transfer_request: TransferRequest<TokenizedAsset<T>>,
-      ): BurnPromise {}
+      to_burn: &TokenizedAsset<T>,
+      asset_cap: &AssetCap<T>,
+      protected_tp: &ProtectedTP<TokenizedAsset<T>>,
+      transfer_request: TransferRequest<TokenizedAsset<T>>,
+    ): BurnPromise {
+  }
   ```
 
 - `prove_burn`
 
-  This function ensures that the circulating supply of the asset cap has indeed been reduced by the balance of the burned tokenized asset.
+  Ensures that the circulating supply of the asset cap is reduced by the balance of the burned tokenized asset.
 
   ```rust
   public fun prove_burn<T>(
-          asset_cap: &AssetCap<T>,
-          promise: BurnPromise) {}
+    asset_cap: &AssetCap<T>,
+    promise: BurnPromise) {
+  }
   ```
 
 </TabItem>
@@ -420,33 +425,35 @@ It allows tokenized asset type creators to enable these operations for Kiosk ass
 
 ### template package
 
-An example use case package, that enables utilization of Rust WASM functionality to support seamless asset creation on the browser.
-This is similar to the launchpad approach and will serve as the template package whenever a new asset requires representation as a tokenized asset.
+An example use case package that enables utilization of Rust WASM functionality to support seamless asset creation on the browser.
+
+This is similar to the launchpad approach and serves as the template package whenever a new asset requires representation as a tokenized asset.
+
 Effectively allowing users to edit fields of this template contract on the fly and publish it with the edits included.
 This package implements two essential modules, each catering to distinct functionalities required for asset tokenization.
 More details regarding how Rust WASM was implemented can be found in the [Web Assembly](#webassembly-wasm-and-template-package) section.
 
 - **Modules**
 
-  - template
+  - `template`
 
-    This is the module where a new asset can be defined.
+    This is the module that supports defining a new asset.
 
-    When there's a necessity to represent a new asset as a fractional asset, this module will undergo modification to `<template>::<TEMPLATE>`, with the `<template>` (in capitals) being the OTW of this new asset.
+    When you need to represent a new asset as a fractional asset, modify this module to `<template>::<TEMPLATE>`, with the `<template>` (in capitals) being the OTW of this new asset.
 
-    This module is designed to call the `asset_tokenization::tokenized_asset::new_asset(...)` method, which facilitates the declaration of new fields for the asset:
+    This module calls the `asset_tokenization::tokenized_asset::new_asset(...)` method, which facilitates the declaration of new fields for the asset:
 
-    - `witness` The OTW `NEW_ASSET`
-    - `total_supply` The total supply allowed to exist at any time
-    - `symbol` The symbol for the asset
-    - `name` The name of the asset
-    - `description` The description of the asset
-    - `icon_url` The URL for the asset logo (optional)
-    - `burnable` Boolean: defines if the asset can be burned by an admin
+    - `witness`: The OTW `NEW_ASSET`
+    - `total_supply`: The total supply allowed to exist at any time
+    - `symbol`: The symbol for the asset
+    - `name`: The name of the asset
+    - `description`: The description of the asset
+    - `icon_url`: The URL for the asset logo (optional)
+    - `burnable`: Boolean that defines if the asset can be burned by an admin
 
-  - genesis
+  - `genesis`
 
-    A genesis type of module that should include a OTW so that the sender can claim the publisher.
+    A genesis type of module that includes a OTW so that the sender can claim the publisher.
 
 ### Publish and mint tokenized sequence diagram
 
@@ -488,8 +495,8 @@ sequenceDiagram
 
 The following sequence diagram presenting how the join flow would take place. The following flow assumes that:
 
-- Tokenized assets X & Y have already been minted by the creator of their type.
-- Tokenized assets X & Y are already placed and locked inside the user's Kiosk.
+- Tokenized assets X and Y have already been minted by the creator of their type.
+- Tokenized assets X and Y are already placed and locked inside the user's kiosk.
 - Everything is executed in the same programmable transaction block (PTB).
 
 ```mermaid
@@ -520,7 +527,7 @@ User->>User's Kiosk: Resolve Promise by returning Tokenized Asset X in user's Ki
 
 The following sequence diagram shows the burn flow and assumes that:
 
-- Tokenized asset has already been minted by the creator of its type.
+- Tokenized asset has already been minted by the creator of its type. 
 - Tokenized asset is already placed and locked inside the user's Kiosk.
 - Everything is executed in the same PTB.
 
