--- a/docs/content/guides/developer/sui-101/shared-owned.mdx
+++ b/docs/content/guides/developer/sui-101/shared-owned.mdx
@@ -40,7 +40,7 @@ The important property that this interface provides is that locked values cannot
 
 <details>
 <summary>
-Toggle the code sample
+Toggle code sample
 </summary>
 {@inject: examples/trading/contracts/escrow/sources/owned.move}
 </details>
@@ -127,7 +127,7 @@ The `swap` function checks that senders and recipients match and that each party
 
 <details>
 <summary>
-Toggle the code sample
+Toggle code sample
 </summary>
 {@inject: examples/trading/contracts/escrow/sources/shared.move}
 </details>
