Test code already existed

--- a/docs/content/guides/developer/sui-101/access-time.mdx
+++ b/docs/content/guides/developer/sui-101/access-time.mdx
@@ -39,7 +39,7 @@ The following functions test `Clock`-dependent code by manually creating a `Cloc
 
 The next example presents a basic test that creates a Clock, increments it, and then checks its value:
 
-{@inject: examples/move/basics/sources/clock.move#module=basics::clock_tests}
+{@inject: crates/sui-framework/packages/sui-framework/tests/clock_tests.move#module=sui::clock_tests noComments}
 
 ## Epoch timestamps
 
